// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Status Component should allow label to be optional 1`] = `
<div
  class="monSummaryStatus"
  role="status"
>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="transportAddress"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  127.0.0.1:9300
                </strong>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="documentCount"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                Documents: 
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  24.8k
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero eui-textNoWrap"
          >
            Status: 
            <span
              class="kuiStatusText"
            >
              <img
                alt="Status: yellow"
                data-test-subj="statusIcon"
                src="../plugins/monitoring/icons/health-yellow.svg"
              />
            </span>
             
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            Yellow
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should allow status to be optional 1`] = `
<div
  class="monSummaryStatus"
  role="status"
>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="freeDiskSpace"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                Free Disk Space: 
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  173.9 GB
                </strong>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="documentCount"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                Documents: 
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  24.8k
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      />
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should render metrics in a summary bar 1`] = `
<div
  class="monSummaryStatus"
  role="status"
>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="freeDiskSpace"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                Free Disk Space: 
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  173.9 GB
                </strong>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
            data-test-subj="documentCount"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                Documents: 
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <strong>
                  24.8k
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero eui-textNoWrap"
          >
            Status: 
            <span
              class="kuiStatusText"
            >
              <img
                alt="Status: green"
                data-test-subj="statusIcon"
                src="../plugins/monitoring/icons/health-green.svg"
              />
            </span>
             
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            Green
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
